[package]
name = "LdtCore"
version = "1.0.0"
edition = "2024"

[lib]
name = "_ldt_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
json5 = "1.3.1"
pyo3 = { version = "0.28.0", features = ["extension-module"] }
pyo3-stub-gen = "0.21.0"
pythonize = { version = "0.28.0", features = ["serde_json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
toml = "1.1.2"
