[project]
name = "ldt-nexus"
version = "1.1.0"
description = "Reactive data-tree management with pathlib-hybrid interface"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "SnayperTihCreator" }]
dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
toml = ["toml>=0.10.2"]
json5 = ["json5>=0.9.14"]
all = ["ldt-nexus[yaml,toml,json5]"]

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"


[tool.maturin]
module-name = "ldt._ldt"
features = ["pyo3/extension-module"]
python-source = "."
include = [
    "ldt/**/*.py",
    "ldt/_ldt.pyi"
]

exclude = [
    "tests/**",
    "docs/**",
    "benchmarks/**",
    ".github/**",
    "uv.lock",
    "*.bat",
    "*.ps1"
]

[tool.uv.sources]
ldt-nexus = { workspace = true }

[dependency-groups]
dev = [
    "ldt-nexus[all]",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
]
